--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -42,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="256dp">
 
-        <com.zchu.heartrate.HeartRateChart
+        <com.example.cmedicine.HeartRateChart
             android:id="@+id/heart_rate_chart"
             android:layout_width="match_parent"
             android:layout_height="208dp" />
