--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -7,36 +7,36 @@
         android:id="@+id/nav_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/ic_home"
-        />
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/ic_home" />
+
     <TextView
         android:id="@+id/title_name"
-        android:layout_margin="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textColor="#000"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:layout_margin="15dp"
         android:background="#f1f1f1"
-        android:typeface="monospace"/>
+        android:gravity="center"
+        android:textColor="#000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:typeface="monospace" />
+
     <Button
         android:id="@+id/like_button"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/favourites"
-        />
+        android:layout_marginRight="10dp"
+        android:background="@drawable/favourites" />
 
     <!--<View  android:layout_height="1px"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:background="#8000"-->
-        <!--/>-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:background="#8000"-->
+    <!--/>-->
 
 </RelativeLayout>
