--- a/app/src/main/res/layout/infolayout.xml
+++ b/app/src/main/res/layout/infolayout.xml
@@ -4,12 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#fff">
-    <SearchView
-        android:id="@+id/search_med"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:queryHint="请输入搜索药材名">
-    </SearchView>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -23,14 +17,14 @@
             android:layout_centerInParent="true"
             android:textSize="20sp"/>
 
-        <Button
-            android:id="@+id/back_Button"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginLeft="10dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/ic_back"/>
+        <!--<Button-->
+            <!--android:id="@+id/back_Button"-->
+            <!--android:layout_width="25dp"-->
+            <!--android:layout_height="25dp"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:background="@drawable/ic_back"/>-->
 
     </RelativeLayout>
     <ListView
